# Haris_Engine_Library

./: README.md
example/: .gitignore  CMakeLists.txt  cmake_build_and_run.sh
example/SandboxApp/: BaseHeaderConfig.h  Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp
example/SandboxApp/LayerImpl/: ExampleLayer.cpp  ExampleLayer.h
release/v000/include/Haris/Asset/shader/: Texture.shader
release/v000/include/Haris/Common/: DebugMacroBuilt.h  std17pch.hpp
release/v000/include/Haris/Common/Assert/: Assert.h  AssertImpl.h
release/v000/include/Haris/Common/Debug/: Instrumentor.h
release/v000/include/Haris/Common/Logger/: Logger.h
release/v000/include/Haris/Engine/: Haris.h
release/v000/include/Haris/Engine/Entry/: Alias.h  Application.h  Core.h  EntryPoint.h  Timestep.h
release/v000/include/Haris/Engine/Event/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
release/v000/include/Haris/Engine/ImGui/: ImGuiLayer.h
release/v000/include/Haris/Engine/Input/: Input.h
release/v000/include/Haris/Engine/InputLabel/: InputLabel.h  KeyboardCode.h  MouseButtonCode.h
release/v000/include/Haris/Engine/Layer/: Layer.h  LayerStack.h
release/v000/include/Haris/Engine/Renderer/: Buffer.h  GraphicsContext.h  OrthographicCamera.h  RenderCommand.h  Renderer.h  Renderer2D.h  RendererAPI.h  Shader.h  Texture.h  VertexArray.h
release/v000/include/Haris/Engine/Viewer/: OrthographicCameraController.h
release/v000/include/Haris/Engine/Window/: Window.h
release/v000/include/Haris/Vendors/imgui/: imgui.h
release/v000/lib/cmake/Haris/: HarisConfig.cmake  HarisTargets-release.cmake  HarisTargets.cmake
release/v000/lib/pkgconfig/: glfw3.pc
